[gd_scene load_steps=35 format=3 uid="uid://bfh386uub7bov"]

[ext_resource type="PackedScene" uid="uid://cicwwq5suugqf" path="res://node/character_node.tscn" id="1_1pirn"]
[ext_resource type="Script" path="res://node/actor_node.gd" id="1_8lbif"]
[ext_resource type="Script" path="res://node/interactable.gd" id="2_vh885"]
[ext_resource type="Material" uid="uid://lbx1ms22gl4m" path="res://asset/vfx/solid_color.tres" id="3_4g5g4"]
[ext_resource type="Material" uid="uid://c12aoaul6bx2r" path="res://asset/vfx/dither.tres" id="3_cgkie"]
[ext_resource type="Script" path="res://node/ui/slots.gd" id="4_vujg7"]
[ext_resource type="Texture2D" uid="uid://d2ymh7ry20owj" path="res://asset/vfx/blossom.png" id="5_dnvvo"]
[ext_resource type="Texture2D" uid="uid://btmd3vjuhnsuy" path="res://asset/vfx/circle-outline.png" id="7_kh208"]
[ext_resource type="Texture2D" uid="uid://creycj7363aur" path="res://asset/vfx/circle.png" id="9_vxyjf"]

[sub_resource type="Curve" id="Curve_k7oce"]
max_value = 90.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 90), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_nuhl2"]
curve = SubResource("Curve_k7oce")

[sub_resource type="Curve" id="Curve_67dw0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.8, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_jwxih"]
curve = SubResource("Curve_67dw0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6c2ke"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 1.00001
angle_curve = SubResource("CurveTexture_nuhl2")
spread = 180.0
initial_velocity_min = 16.0
initial_velocity_max = 64.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_jwxih")
color = Color(0.898039, 0.266667, 0.380392, 1)

[sub_resource type="Curve" id="Curve_ip01j"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_368o1"]
curve = SubResource("Curve_ip01j")

[sub_resource type="Curve" id="Curve_74cdu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tf65g"]
curve = SubResource("Curve_74cdu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hmdtg"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_tf65g")
color = Color(0.513726, 0.760784, 0.313726, 1)
alpha_curve = SubResource("CurveTexture_368o1")

[sub_resource type="Curve" id="Curve_1b2dg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1e-05, 0.5), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_g3u5u"]
curve = SubResource("Curve_1b2dg")

[sub_resource type="Curve" id="Curve_5t2ri"]
_data = [Vector2(1e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_6ye68"]
curve = SubResource("Curve_5t2ri")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y1jdr"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(2, 2, 1)
spread = 30.0
initial_velocity_min = 64.0
initial_velocity_max = 128.0
scale_min = 0.5
scale_max = 0.75
scale_curve = SubResource("CurveTexture_6ye68")
color = Color(0.6, 0.576471, 0.639216, 1)
alpha_curve = SubResource("CurveTexture_g3u5u")

[sub_resource type="Curve" id="Curve_ritsw"]
_data = [Vector2(0.8, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_oad2g"]
curve = SubResource("Curve_ritsw")

[sub_resource type="Curve" id="Curve_0yq4l"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_bcx5r"]
curve = SubResource("Curve_0yq4l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l0h7k"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 32.0
initial_velocity_max = 64.0
scale_min = 0.5
scale_curve = SubResource("CurveTexture_bcx5r")
color = Color(0.6, 0.576471, 0.639216, 1)
alpha_curve = SubResource("CurveTexture_oad2g")

[sub_resource type="Animation" id="Animation_4s3r3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:clip_children")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WillSlots:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HealParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite:material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_du4yn"]
resource_name = "damaged"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(2, 0), Vector2(-2, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:clip_children")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WillSlots:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_update_will_slots"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite:material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_4g5g4"), null]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite:material:shader_parameter/color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.952941, 0.360784, 0.286275, 1)]
}

[sub_resource type="Animation" id="Animation_2qlbx"]
resource_name = "healed"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:clip_children")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="Animation" id="Animation_3egke"]
resource_name = "will_unchanged"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:clip_children")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cuf6d"]
_data = {
"RESET": SubResource("Animation_4s3r3"),
"damaged": SubResource("Animation_du4yn"),
"healed": SubResource("Animation_2qlbx"),
"will_unchanged": SubResource("Animation_3egke")
}

[node name="Actor" instance=ExtResource("1_1pirn")]
script = ExtResource("1_8lbif")

[node name="Input" type="Control" parent="." index="3"]
layout_mode = 3
anchors_preset = 0
offset_left = -9.0
offset_top = -47.0
offset_right = 9.0
offset_bottom = 5.0
mouse_filter = 2
script = ExtResource("2_vh885")

[node name="WillSlots" type="Control" parent="." index="4"]
visible = false
custom_minimum_size = Vector2(6, 6)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -3.0
offset_top = 16.0
offset_right = 3.0
offset_bottom = 22.0
grow_horizontal = 2
script = ExtResource("4_vujg7")

[node name="DamageParticles" type="GPUParticles2D" parent="." index="5"]
show_behind_parent = true
position = Vector2(0, -16)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_6c2ke")
texture = ExtResource("5_dnvvo")
one_shot = true
explosiveness = 0.75

[node name="HealParticles" type="GPUParticles2D" parent="." index="6"]
position = Vector2(0, -16)
emitting = false
amount = 2
process_material = SubResource("ParticleProcessMaterial_hmdtg")
texture = ExtResource("7_kh208")

[node name="MoveParticles" type="GPUParticles2D" parent="." index="7"]
show_behind_parent = true
material = ExtResource("3_cgkie")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_y1jdr")
texture = ExtResource("9_vxyjf")
lifetime = 0.25
one_shot = true
explosiveness = 0.9
local_coords = true

[node name="ExhaustParticles" type="GPUParticles2D" parent="." index="8"]
material = ExtResource("3_cgkie")
emitting = false
process_material = SubResource("ParticleProcessMaterial_l0h7k")
texture = ExtResource("9_vxyjf")
lifetime = 0.5
one_shot = true
explosiveness = 0.9
local_coords = true

[node name="Animator" type="AnimationPlayer" parent="." index="9"]
libraries = {
"": SubResource("AnimationLibrary_cuf6d")
}
